# authmap

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: log_watcher.rs  main.rs
